<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65px"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rlyBack"
            android:layout_width="45px"
            android:layout_height="45px"
            android:layout_marginTop="20px"
            android:gravity="center">

            <ImageView
                android:layout_width="12px"
                android:layout_height="18px"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_left"/>

        </RelativeLayout>

        <com.qiumi.app.support.component.FontTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:layout_centerHorizontal="true"
            app:fontName="@string/font_pf_medium"
            android:textColor="@color/black_33"
            android:textSize="17px"
            android:text="@string/mine_set_password_title"/>

    </RelativeLayout>

    <!-- 登录密码 -->
    <LinearLayout style="@style/mine_set_pay_password_verification_item_cell">

        <com.qiumi.app.support.component.FontTextView
            app:fontName="@string/font_pf_medium"
            style="@style/mine_set_pay_password_verification_item_left_text"
            android:text="@string/mine_set_pay_password_login_password" />

        <com.qiumi.app.support.component.FontEditTextView
            android:id="@+id/etPassword"
            app:fontName="@string/font_pf_regular"
            style="@style/mine_set_pay_password_verification_item_left_text_gray"
            android:inputType="textPassword"
            android:hint="@string/mine_set_pay_password_verification_code" />

    </LinearLayout>

    <View style="@style/mine_set_pay_password_horizontal_divider" />

    <!-- 手机验证码 -->
    <LinearLayout style="@style/mine_set_pay_password_verification_item_cell">

        <com.qiumi.app.support.component.FontTextView
            app:fontName="@string/font_pf_medium"
            style="@style/mine_set_pay_password_verification_item_left_text"
            android:text="@string/mine_set_pay_password_phone_verification_code" />

        <com.qiumi.app.support.component.FontEditTextView
            android:id="@+id/etSmsCode"
            app:fontName="@string/font_pf_regular"
            style="@style/mine_set_pay_password_verification_item_left_text_gray"
            android:inputType="number"
            android:hint="@string/mine_set_pay_password_verification_code_hit" />

        <com.qiumi.app.support.component.FontTextView
            android:id="@+id/tvSmsCode"
            app:fontName="@string/font_pf_regular"
            style="@style/mine_set_pay_password_verification_item_blue"
            android:text="@string/mine_set_pay_password_get_verification_code" />

    </LinearLayout>

    <View style="@style/mine_set_pay_password_horizontal_divider" />

    <com.qiumi.app.support.component.FontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16px"
        android:lineSpacingExtra="7dp"
        android:paddingLeft="@dimen/mine_horizontal_dimen"
        android:paddingRight="@dimen/mine_horizontal_dimen"
        app:fontName="@string/font_pf_regular"
        android:text="@string/mine_set_pay_password_need_password"
        android:textColor="#999999"
        android:textSize="13px" />

    <!-- 高度权重为1 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.qiumi.app.support.component.FontTextView
        android:id="@+id/tvSubmit"
        app:fontName="@string/font_pf_regular"
        style="@style/mine_bottom_blue_button" />

</LinearLayout>