<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/mine_activity_root_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65px"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rlyBack"
            android:layout_width="45px"
            android:layout_height="45px"
            android:layout_marginTop="20px"
            android:gravity="center">

            <ImageView
                android:layout_width="12px"
                android:layout_height="18px"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_left"/>

        </RelativeLayout>

        <com.qiumi.app.support.component.FontTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:layout_centerHorizontal="true"
            app:fontName="@string/font_pf_medium"
            android:textColor="@color/black_33"
            android:textSize="17px"
            android:text="@string/mine_identification_upload_id_card_title"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- 身份证-正面 -->
            <com.qiumi.app.support.component.FontTextView
                style="@style/mine_identification_upload_id_card_front"
                app:fontName="@string/font_pf_medium"
                android:text="@string/mine_identification_upload_id_card_front" />

            <FrameLayout
                android:id="@+id/flyFront"
                style="@style/mine_identification_upload_id_card_cell">

                <ImageView style="@style/mine_identification_upload_id_card_cell_image" />

                <ImageView
                    android:id="@+id/ivFront"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    tools:src="@drawable/icon_app" />

            </FrameLayout>

            <!-- 身份证-反面 -->
            <com.qiumi.app.support.component.FontTextView
                style="@style/mine_identification_upload_id_card_front"
                android:layout_marginTop="30px"
                android:text="@string/mine_identification_upload_id_card_back" />

            <FrameLayout
                android:id="@+id/flyBack"
                style="@style/mine_identification_upload_id_card_cell">

                <ImageView style="@style/mine_identification_upload_id_card_cell_image" />

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    tools:src="@drawable/icon_app" />
            </FrameLayout>

            <View style="@style/mine_view_vertical_weight_1" />

            <com.qiumi.app.support.component.FontTextView
                style="@style/mine_identification_upload_id_card_select_hint"
                app:fontName="@string/font_pf_regular"
                android:text="@string/mine_identification_upload_id_card_select_hint" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <!-- 上传按钮 -->
            <com.qiumi.app.support.component.FontTextView
                android:id="@+id/tv_upload_button"
                style="@style/mine_bottom_blue_button"
                app:fontName="@string/font_pf_regular"
                android:layout_marginTop="25px"
                android:text="@string/mine_identification_upload_id_card_button" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>